--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
+  "name": "tesseract-ocr-api",
+  "version": "1.0.0",
+  "main": "server.js",
+  "engines": {
+    "node": "20.x"
+  },
   "dependencies": {
-    "express": "^4.21.2",
+    "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "tesseract.js": "^6.0.0"
+    "tesseract.js": "^5.0.5"
   }
 }
