--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node": "20.x"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "tesseract.js": "^5.0.5"
